src/styles.css
/* ... */
.vscode-body blockquote {
  background-color: initial;
}

.vscode-body code > div {
  background: none
}

.vscode-body.showEditorSelection .code-line .code-line:hover:before {
  border-left: none;
}

.vscode-body p,
.vscode-body blockquote,
.vscode-body ul,
.vscode-body ol,
.vscode-body dl,
.vscode-body table,
.vscode-body pre {
  margin-top: 16px;
  margin-bottom: 16px;
}

/* from github-markdown.css */

.vscode-body {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  /*todo: reconsider font families. system sans-serif defaults may be a good starting point */
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
  font-size: 16px;
  line-height: 1.5;
  word-wrap: break-word;
}

.vscode-body .octicon {
  display: inline-block;
  fill: currentColor;
  vertical-align: text-bottom;
}

.vscode-body h1:hover .anchor .octicon-link:before,
.vscode-body h2:hover .anchor .octicon-link:before,
.vscode-body h3:hover .anchor .octicon-link:before,
.vscode-body h4:hover .anchor .octicon-link:before,
.vscode-body h5:hover .anchor .octicon-link:before,
.vscode-body h6:hover .anchor .octicon-link:before {
  width: 16px;
  height: 16px;
  content: ' ';
  display: inline-block;
  background-color: currentColor;
  -webkit-mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' version='1.1' aria-hidden='true'><path fill-rule='evenodd' d='M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z'></path></svg>");
  mask-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' version='1.1' aria-hidden='true'><path fill-rule='evenodd' d='M7.775 3.275a.75.75 0 001.06 1.06l1.25-1.25a2 2 0 112.83 2.83l-2.5 2.5a2 2 0 01-2.83 0 .75.75 0 00-1.06 1.06 3.5 3.5 0 004.95 0l2.5-2.5a3.5 3.5 0 00-4.95-4.95l-1.25 1.25zm-4.69 9.64a2 2 0 010-2.83l2.5-2.5a2 2 0 012.83 0 .75.75 0 001.06-1.06 3.5 3.5 0 00-4.95 0l-2.5 2.5a3.5 3.5 0 004.95 4.95l1.25-1.25a.75.75 0 00-1.06-1.06l-1.25 1.25a2 2 0 01-2.83 0z'></path></svg>");
}

.vscode-body details,
.vscode-body figcaption,
.vscode-body figure {
  display: block;
}

.vscode-body summary {
  display: list-item;
}

.vscode-body a {
  background-color: transparent;
  text-decoration: none;
}

.vscode-body a:active,
.vscode-body a:hover {
  outline-width: 0;
}

.vscode-body abbr[title] {
  border-bottom: none;
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

.vscode-body b,
.vscode-body strong {
  font-weight: 600;
}

.vscode-body dfn {
  font-style: italic;
}

.vscode-body h1 {
  margin: .67em 0;
  font-weight: 600;
  padding-bottom: .3em;
  font-size: 2em;
  border-bottom: 1px solid var(--color-border-muted);
}

.vscode-body mark {
  background-color: #ff0;
  color: var(--color-text-primary);
}

.vscode-body small {
  font-size: 90%;
}

.vscode-body sub,
.vscode-body sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

.vscode-body sub {
  bottom: -0.25em;
}

.vscode-body sup {
  top: -0.5em;
}

.vscode-body img {
  border-style: none;
  max-width: 100%;
  box-sizing: content-box;
  background-color: var(--color-canvas-default);
}

.vscode-body code,
.vscode-body kbd,
.vscode-body pre,
.vscode-body samp {
  font-family: monospace,monospace;
  font-size: 1em;
}

.vscode-body figure {
  margin: 1em 40px;
}

.vscode-body hr {
  box-sizing: content-box;
  overflow: hidden;
  background: transparent;
  border-bottom: 1px solid var(--color-border-muted);
  height: .25em;
  padding: 0;
  margin: 24px 0;
  background-color: var(--color-border-default);
  border: 0;
}

.vscode-body html [type=button],
.vscode-body [type=reset],
.vscode-body [type=submit] {
  -webkit-appearance: button;
}

.vscode-body [type=button]::-moz-focus-inner,
.vscode-body [type=reset]::-moz-focus-inner,
.vscode-body [type=submit]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.vscode-body [type=button]:-moz-focusring,
.vscode-body [type=reset]:-moz-focusring,
.vscode-body [type=submit]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.vscode-body [type=checkbox],
.vscode-body [type=radio] {
  box-sizing: border-box;
  padding: 0;
}

.vscode-body [type=number]::-webkit-inner-spin-button,
.vscode-body [type=number]::-webkit-outer-spin-button {
  height: auto;
}

.vscode-body [type=search] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}

.vscode-body [type=search]::-webkit-search-cancel-button,
.vscode-body [type=search]::-webkit-search-decoration {
  -webkit-appearance: none;
}

.vscode-body ::-webkit-input-placeholder {
  color: inherit;
  opacity: .54;
}

.vscode-body ::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.vscode-body a:hover {
  text-decoration: underline;
}

.vscode-body hr::before {
  display: table;
  content: "";
}

.vscode-body hr::after {
  display: table;
  clear: both;
  content: "";
}

.vscode-body table {
  border-spacing: 0;
  border-collapse: collapse;
  display: block;
  width: max-content;
  max-width: 100%;
  overflow: auto;
}

.vscode-body td,
.vscode-body th {
  padding: 0;
}

.vscode-body details summary {
  cursor: pointer;
}

.vscode-body details:not([open])>*:not(summary) {
  display: none !important;
}
/* ... */

